--- a/index.html
+++ b/index.html
@@ -230,23 +230,31 @@
           <div class="content">
             <div class="contentBx active" id="content1">
                 <div>
-                    <div class="Text">
-                        <h2> Languages </h2>
-                        <p>
-                          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-                        </p>
-                      </div>
+                  <div class="Text">
+                    <h2> Languages <hr> </h2>     
+                    <p> French </p><span class="bar"><span class="french"></span></span>
+                    <p> English </p><span class="bar"><span class="english"></span></span>
+                    <p> Spanish </p><span class="bar"><span class="spanish"></span></span>
+                    <p> Portuguese </p><span class="bar"><span class="portuguese"></span></span>
+                    <p> Italian </p><span class="bar"><span class="italian"></span></span>
+                    <p> Russian </p><span class="bar"><span class="russian"></span></span>
+                    <br>
+                    <br>
                   </div>
+                </div>
               </div>
               <div class="contentBx"  id="content2">
                 <div>
-                    <div class="Text">
-                        <h2> Microsoft Office </h2>
-                          <p>
-                          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-                          </p>
-                      </div>
+                  <div class="Text">
+                    <h2> Microsoft Office <hr> </h2>
+                    <p> Excel </p><span class="bar"><span class="excel"></span></span>
+                    <p> PowerPoint </p><span class="bar"><span class="powerpoint"></span></span>
+                    <p> Word </p><span class="bar"><span class="word"></span></span>
+                    <p> VBA </p><span class="bar"><span class="VBA"></span></span>
+                    <br>
+                    <br>
                   </div>
+                </div>
               </div>
               <div class="contentBx" id="content3">
                 <div>
